update image load for creating post
